# sigrokdecode-stub

./: README.md  pyproject.toml
scripts/: inject_frags.py
src/sigrokdecode/: __init__.py  __init__.pyi  typing.py  typing.pyi
src/typedsigrokdecode/: __init__.py  __init__.pyi  typing.py
