[project]
name = "sigrokdecode-stub"
version = "0.6.0.20260331"
description = "Stub version of libsigrokdecode"
authors = [
    {name = "dogtopus",email = "dogtopus@users.noreply.github.com"}
]
readme = "README.md"
lisense = "GPL-3.0-only"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
packages = [{include = "sigrokdecode", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
