[project]
name = "typedsigrokdecode"
version = "0.6.0.20260401"
description = "Typed wrapper of libsigrokdecode"
authors = [
    {name = "dogtopus",email = "dogtopus@users.noreply.github.com"}
]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
packages = [{include = "typedsigrokdecode", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
